--- a/Assets/style/css.css
+++ b/Assets/style/css.css
@@ -234,6 +234,12 @@ main .card h6{
     font-weight: bold;
 }
 
+/* Chart */
+canvas {
+    width: 100%;
+    height: 150px;
+}
+
 /* Modal Checkout*/
 .modal-content .container {
     margin-top: 15px;
